<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"

        android:text="@string/set_due_time"
        android:gravity="center"
        android:background="@drawable/back"
        android:layout_margin="4dp"
        android:id="@+id/setDueTimeTextView"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:textSize="40dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp"
            android:hint="@string/title"
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/titleEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:gravity="center"
            android:hint="@string/description"
            android:textAlignment="center"
            android:id="@+id/descriptionEditText"/>
    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:text="@string/add_task"
        android:layout_height="match_parent"
        android:id="@+id/addTaskButton" />


</LinearLayout>