<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/soonest_task"
        android:gravity="center"
        android:background="@drawable/back"
        android:layout_margin="4dp"
        android:id="@+id/soonestTaskDueDateDescriptionTextView"/>

    <EditText
        android:textSize="40dp"
        android:layout_width="0dp"
        android:hint="@string/title"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/titleEditText"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:text="@string/add_group"
        android:layout_height="match_parent"
        android:id="@+id/addGroupButton" />

</LinearLayout>